[gd_scene load_steps=7 format=3 uid="uid://17exbc5nsh7t"]

[ext_resource type="Texture2D" uid="uid://8f8kl5ikcmmt" path="res://knight_idle_anim_f0.png" id="1_7ej7c"]
[ext_resource type="Script" path="res://player.gd" id="1_aqgmn"]
[ext_resource type="Resource" uid="uid://duu01tta4xuyx" path="res://inventory/playerinv.tres" id="2_8t2kf"]
[ext_resource type="PackedScene" uid="uid://ch7aw81li8o3k" path="res://inventory/inv_ui.tscn" id="3_kr2my"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bmlk"]
size = Vector2(43, 33)

[sub_resource type="CircleShape2D" id="CircleShape2D_05y34"]
radius = 55.0

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_aqgmn")
inv = ExtResource("2_8t2kf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.00006, -8.99997)
scale = Vector2(5, 5)
texture = ExtResource("1_7ej7c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_7bmlk")

[node name="Interaction_Components" type="Node2D" parent="."]
z_index = 1

[node name="InteractionArea" type="Area2D" parent="Interaction_Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_Components/InteractionArea"]
position = Vector2(4, -10)
shape = SubResource("CircleShape2D_05y34")

[node name="InteractLabel" type="Label" parent="Interaction_Components"]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
offset_left = -19.0
offset_top = -96.0
offset_right = 21.0
offset_bottom = -63.0
text = "Test"

[node name="Inv_UI" parent="." instance=ExtResource("3_kr2my")]
offset_left = -89.0
offset_top = -153.0
offset_right = -49.0
offset_bottom = -113.0

[connection signal="area_entered" from="Interaction_Components/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction_Components/InteractionArea" to="." method="_on_interaction_area_area_exited"]
